fix(notification): remove empty grid gap when icon is hidden

--- a/packages/components/src/components/notification/notification-grid-default.scss
+++ b/packages/components/src/components/notification/notification-grid-default.scss
@@ -50,8 +50,8 @@
 	}
 
 	// 3. icon or img
-	&[data-icon],
-	&[data-semantic]:not([data-semantic="adaptive"]),
+	&[data-icon]:not([data-show-icon="false"]),
+	&[data-semantic]:not([data-semantic="adaptive"], [data-show-icon="false"]),
 	&:has(img) {
 		grid-template-areas: "icon content";
 		grid-template-columns: min-content 1fr;
